compiler/testData/diagnostics/tests/dataClasses/dataObject.kt
<!WRONG_MODIFIER_TARGET!>data<!> object Object<!CONSTRUCTOR_IN_OBJECT!>(val x: Int, val y: Int)<!>
